# jobq

./: .env  Cargo.toml  docker-compose.yaml
.devcontainer/: .gitignore  Dockerfile  devcontainer.json  docker-compose.yml
.sqlx/: query-0a5594fb2f90174aeeb4e3f92c3bc47aa7c70f1bf6f56f13ce1e43147ee4e4d3.json  query-35a93fe43b15072ac2d2feb6ac820b17a807566b50d0f60dac386f717a8282c9.json  query-5940710dcac7eac1fba14d947a18f85d078d3a4c8853f851b5f9dc7954c5cbb6.json  query-8db7c6f9f33ede9434734bc7215828ec6ed99e2ff93f5df6a93e298cda74a70c.json  query-a9f21bf747c287087319a09becb2330cdea41f437d9874aab7890638d0336e09.json  query-cf748415a6589a791e681c488b259e80ee11dd16a2658ff6ee7ef972b9ae71e6.json
src/: db.rs  dealer.rs  lib.rs  main.rs  router.rs  server.rs  setup.sql  telemetry.rs  worker.rs
