[package]
name = "jobq"
version = "0.1.0"
authors = ["cetra3 <cetra3@hotmail.com>"]
license = "MIT/Apache-2.0"
description = "A Background Job Queue using Tokio, PostgreSQL & ZeroMQ"
edition = "2021"
repository = "https://github.com/cetra3/jobq"
readme = "README.md"

[dependencies]
anyhow = "1"
async-trait = "0.1"
chrono = "0.4"
futures = "0.3"
log = "0.4"
pretty_env_logger = "0.5"
serde = "1"
serde_cbor = "0.11"
serde_derive = "1"
serde_json = "1"
sqlx = { version = "0.7", default-features = false, features = [
    "runtime-tokio",
    "postgres",
    "macros",
    "uuid",
    "json",
] }
structopt = "0.3"
tokio = { version = "1", features = ["full"] }
tokio-serde = { version = "0.8", features = ["json", "cbor"] }
tokio-util = { version = "0.7", features = ["full"] }
uuid = { version = "1", features = ["serde", "v4"] }
