[package]
name = "jobq"
version = "0.1.0"
authors = ["cetra3 <cetra3@hotmail.com>", "mlesin <mlesin@gmail.com>"]
license = "MIT/Apache-2.0"
description = "A Background Job Queue using Tokio, PostgreSQL"
edition = "2021"
repository = "https://github.com/mlesin/jobq"
readme = "README.md"

[dependencies]
anyhow = "1"
async-channel = "1"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
futures = "0.3"
opentelemetry = { version = "0.20", features = ["trace", "rt-tokio"] }
opentelemetry-jaeger = { version = "0.19", features = [
    "collector_client",
    "isahc_collector_client",
    "rt-tokio",
] }
sqlx = { version = "0.7", default-features = false, features = [
    "runtime-tokio",
    "postgres",
    "macros",
    "uuid",
    "json",
] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }
tracing = "0.1"
tracing-opentelemetry = "0.21"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["serde", "v4"] }
